--- a/templates/content.html
+++ b/templates/content.html
@@ -60,26 +60,25 @@
   <div class="form-group" data-aos="zoom-in"> 
     <h3>Buy stocks with real time prices</h3>
     <p>Practice trading with a virtual $10,000 and play our stock market game. </p>
-</div>
+  </div>
 
-<div class="form-group" data-aos="zoom-in"> 
-  <h3>How it works?</h3>
-          <ul>
-              <li>Sing up</li>
-              <li>Start with 10.000$</li>
-              <li>Practice trading with your virtual cash. </li>
-          </ul>
-</div>
+  <div class="form-group" data-aos="zoom-in"> 
+    <h3>How it works?</h3>
+             <p>✓ Sing up
+             <br>
+                ✓ Start with 10.000$
+                <br>
+                ✓ Practice with your virtual cash. </p>
+  </div>
 
-    <div class="form-group" data-aos="zoom-in">  
-        <h3>Sign up today!</h3>    
-            If you're hesitant, scared of the risk or don't have any knowledge of the stock market... <br>
-    </div>
+      <div class="form-group" data-aos="zoom-in">  
+          <h3>Sign up today!</h3>    
+              If you're hesitant, scared of the risk or don't have any knowledge of the stock market... <br>
+      </div>
         
         
 </div>
     
-</div>
 <!-- Footer -->
 <div class="form-group" id="form-content">
 <h4>{{ message }}</h4>
@@ -100,7 +99,7 @@
             </div>
 
         <div class="one">
-        <textarea  style="resize:none" class="form-control" id="messageInput" rows="5" cols="60" name="message" required=""  oninvalid="this.setCustomValidity('Please fill out this section!')" oninput="setCustomValidity('')"></textarea>
+        <textarea  style="resize:none" class="form-control" id="messageInput" rows="5" cols="60" name="message" placeholder"Enter your message..." required=""  oninvalid="this.setCustomValidity('Please fill out this section!')" oninput="setCustomValidity('')"></textarea>
         </div>
 
         <button id="contactBtn" class="btn btn-primary" type="submit">Submit</button>
