--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,8 @@
 <html lang="en">
 
     <head>
-
-
+        <!-- Disable rotation-->
+        <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, width=device-width" >
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
