--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,4 @@
-div{
-    border: 1px solid olivedrab;
-}
+
 nav .navbar-brand
 {
     /* size for brand */
@@ -199,17 +197,14 @@ Fix from width 793px */
     display: grid;  
     grid-gap: 5px;  
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    grid-template-rows: repeat(2, 300px);
+    grid-template-rows: repeat(1, 300px);
     height: auto;
 }
 #containerz div{
-height: auto;
   background-color: rgba(181,212,204, 0.4);
   border-radius: 15px;
-  border: 1px ;
   padding: 20px;
   margin: 15px;
-  border: 1px solid saddlebrown;
 }
 
 #containerz div ul li:before {
@@ -323,6 +318,8 @@ Pixel 2 XL
 @media (max-width:679px) and (min-width:100px) {
     #firstContainer{
         flex-direction: column;
+        width: auto;
+        
     }
 
      #contentTitle{
@@ -338,97 +335,113 @@ Pixel 2 XL
          height:100vh;
      }
 
-     @media (orientation: landscape) {
 
-        #firstContainer{
-            height: 100vh;
-            border: 2px solid white;
-        }
-    }
 }
 
 /* Ipads, Tablets */
 
 @media (max-width:768px) and (min-width:680px) {
-
-    #contentTitle{
-        padding:50px 35px 0;
-        font-size: 50px;
-        width: 100%;
+    #firstContainer{
+        flex-direction: column; 
+        width: auto;
     }
 
-        #my-chart.column{
-            margin-right:20px;
-            width: 100%;
-         }
-
-}
-
-/* 769px — 1024px: Small screens, laptops */
-@media (max-width:1024px) and (min-width:769px) {
-
-
      #contentTitle{
-        padding:25px 35px 0;
-        font-size: 50px;
-        width: 100%;
+         padding: 5px 10px 5px;
+         width: 100%;;
      }
-
      #my-chart.column{
-        margin-right:50px;
         width: 100%;
      }
      #form-content{
          padding-top:100px;
          height:100vh;
      }
-     #contactForm{
-         border-radius: 15px;
+     #containerz{
+       height: fit-content;
      }
+
+}
+
+/* 769px — 1024px: Small screens, laptops */
+@media (max-width:1024px) and (min-width:769px) {
+    #firstContainer{
+        flex-direction: column;
+        
+    }
+
+     #contentTitle{
+         padding: 5px 10px 5px;
+         width: 100%;
+     }
+     #my-chart.column{
+        width: 100%;
+        position: absolute;
+        right: 100px;
+        margin-top: 200px;
+     }
+     #form-content{
+         padding-top:100px;
+         height:100vh;
+     }
+     #containerz{
+      height: fit-content;
+    }
 }
 
 /* 1025px — 1200px: Desktops, large screens */
 @media (max-width:1200px) and (min-width:1025px) {
 
-    #contentTitle{
-        padding:25px 35px 0;
-        font-size: 50px;
-        width: 100%;
-        background-color: bisque;
+    #firstContainer{
+        flex-direction: column;
+        
     }
 
-        #my-chart.column{
-            margin-right:50px;
-            width: 100%;
-            
-         }
-
-        .navbar-brand{
-            font-size:60px !important;
-        }
+     #contentTitle{
+         padding: 5px 10px 5px;
+         width: 100%;
+     }
+     #my-chart.column{
+        width: 100%;
+        position: absolute;
+        right: 100px;
+        margin-top: 200px;
+     }
+     #form-content{
+         padding-top:100px;
+         height:100vh;
+     }
 }
 
 
 /* 1201px and more —  Extra large screens, TV */
 @media (min-width:1201px) {
-        #firstContainer{
-            height: 100vh;
-        }
-        #contentTitle{
-            padding:25px 35px 0;
-            font-size: 60px;
-            width: 100%;
-        }
+    #firstContainer{
+        flex-direction: column;
+        
+    }
 
-            #my-chart.column{
-                margin-right:50px;
-                width: 100%;
-             }
-    
-            .navbar-brand{
-                font-size:60px !important;
-                font-family: 'Times New Roman';
-            }
+     #contentTitle{
+         padding: 5px 10px 5px;
+         width: 100%;
+
+     }
+     #my-chart.column{
+        width: 100%;
+        position: absolute;
+        right: 100px;
+        margin-top: 200px;
+
+        
+     }
+     #containerz{
+        height: auto;
+
+    }
+     #form-content{
+         padding-top:100px;
+         height:100vh;
+     }
 }
 
 
@@ -455,108 +468,6 @@ register.html
 }
 
 
-@keyframes ldio-pxsmqoait2h {
-  0% {
-    opacity: 1;
-    backface-visibility: hidden;
-    transform: translateZ(0) scale(1.5,1.5);
-  } 100% {
-    opacity: 0;
-    backface-visibility: hidden;
-    transform: translateZ(0) scale(1,1);
-  }
-}
-.ldio-pxsmqoait2h div > div {
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background: #ff727d;
-  animation: ldio-pxsmqoait2h 1s linear infinite;
-}.ldio-pxsmqoait2h div:nth-child(1) > div {
-  left: 74px;
-  top: 44px;
-  animation-delay: -0.875s;
-}
-.ldio-pxsmqoait2h > div:nth-child(1) {
-  transform: rotate(0deg);
-  transform-origin: 80px 50px;
-}.ldio-pxsmqoait2h div:nth-child(2) > div {
-  left: 65px;
-  top: 65px;
-  animation-delay: -0.75s;
-}
-.ldio-pxsmqoait2h > div:nth-child(2) {
-  transform: rotate(45deg);
-  transform-origin: 71px 71px;
-}.ldio-pxsmqoait2h div:nth-child(3) > div {
-  left: 44px;
-  top: 74px;
-  animation-delay: -0.625s;
-}
-.ldio-pxsmqoait2h > div:nth-child(3) {
-  transform: rotate(90deg);
-  transform-origin: 50px 80px;
-}.ldio-pxsmqoait2h div:nth-child(4) > div {
-  left: 23px;
-  top: 65px;
-  animation-delay: -0.5s;
-}
-.ldio-pxsmqoait2h > div:nth-child(4) {
-  transform: rotate(135deg);
-  transform-origin: 29px 71px;
-}.ldio-pxsmqoait2h div:nth-child(5) > div {
-  left: 14px;
-  top: 44px;
-  animation-delay: -0.375s;
-}
-.ldio-pxsmqoait2h > div:nth-child(5) {
-  transform: rotate(180deg);
-  transform-origin: 20px 50px;
-}.ldio-pxsmqoait2h div:nth-child(6) > div {
-  left: 23px;
-  top: 23px;
-  animation-delay: -0.25s;
-}
-.ldio-pxsmqoait2h > div:nth-child(6) {
-  transform: rotate(225deg);
-  transform-origin: 29px 29px;
-}.ldio-pxsmqoait2h div:nth-child(7) > div {
-  left: 44px;
-  top: 14px;
-  animation-delay: -0.125s;
-}
-.ldio-pxsmqoait2h > div:nth-child(7) {
-  transform: rotate(270deg);
-  transform-origin: 50px 20px;
-}.ldio-pxsmqoait2h div:nth-child(8) > div {
-  left: 65px;
-  top: 23px;
-  animation-delay: 0s;
-}
-.ldio-pxsmqoait2h > div:nth-child(8) {
-  transform: rotate(315deg);
-  transform-origin: 71px 29px;
-}
-.loadingio-spinner-spin-g6wdppbvcis {
-  width: 67px;
-  height: 67px;
-  display: inline-block;
-  overflow: hidden;
-  background: rgba(237,242,243,255);
-}
-.ldio-pxsmqoait2h {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  transform: translateZ(0) scale(0.67);
-  backface-visibility: hidden;
-  transform-origin: 0 0; /* see note above */
-}
-.ldio-pxsmqoait2h div { box-sizing: content-box; }
-/* generated by https://loading.io/ */
-
-
 /* Crypto Forms */
 
 
@@ -570,8 +481,145 @@ register.html
 }
 
 .containercss div {
-    background-color: #ff727d;
     height: max-content;
     margin: 15px;
 
 }
+@media (orientation: landscape) {
+    #containerz{
+        height: auto;
+    }
+
+    #firstContainer{
+        flex-direction: column;
+    }
+
+     #contentTitle{
+         padding: 5px 10px 5px;
+     }
+     #my-chart.column{
+
+
+     }
+     #form-content{
+         height:100vh;
+         padding: 0;
+         height: auto;
+     }
+}
+
+
+.quote {
+    margin: 50px 30px 30px;
+    background-color: rgba(181,212,204, 0.4);
+    padding: 1em;
+    border-radius: 1em;
+    font: 1.2rem/1.4 Georgia, serif;
+    width: fit-content;
+  }
+  .quote figcaption,
+  .quote blockquote {
+    margin: 1em;
+  }
+/*---------------------------------------------------*/
+
+  @keyframes ldio-pxsmqoait2h {
+    0% {
+      opacity: 1;
+      backface-visibility: hidden;
+      transform: translateZ(0) scale(1.5,1.5);
+    } 100% {
+      opacity: 0;
+      backface-visibility: hidden;
+      transform: translateZ(0) scale(1,1);
+    }
+  }
+  .ldio-pxsmqoait2h div > div {
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #ff727d;
+    animation: ldio-pxsmqoait2h 1s linear infinite;
+  }.ldio-pxsmqoait2h div:nth-child(1) > div {
+    left: 74px;
+    top: 44px;
+    animation-delay: -0.875s;
+  }
+  .ldio-pxsmqoait2h > div:nth-child(1) {
+    transform: rotate(0deg);
+    transform-origin: 80px 50px;
+  }.ldio-pxsmqoait2h div:nth-child(2) > div {
+    left: 65px;
+    top: 65px;
+    animation-delay: -0.75s;
+  }
+  .ldio-pxsmqoait2h > div:nth-child(2) {
+    transform: rotate(45deg);
+    transform-origin: 71px 71px;
+  }.ldio-pxsmqoait2h div:nth-child(3) > div {
+    left: 44px;
+    top: 74px;
+    animation-delay: -0.625s;
+  }
+  .ldio-pxsmqoait2h > div:nth-child(3) {
+    transform: rotate(90deg);
+    transform-origin: 50px 80px;
+  }.ldio-pxsmqoait2h div:nth-child(4) > div {
+    left: 23px;
+    top: 65px;
+    animation-delay: -0.5s;
+  }
+  .ldio-pxsmqoait2h > div:nth-child(4) {
+    transform: rotate(135deg);
+    transform-origin: 29px 71px;
+  }.ldio-pxsmqoait2h div:nth-child(5) > div {
+    left: 14px;
+    top: 44px;
+    animation-delay: -0.375s;
+  }
+  .ldio-pxsmqoait2h > div:nth-child(5) {
+    transform: rotate(180deg);
+    transform-origin: 20px 50px;
+  }.ldio-pxsmqoait2h div:nth-child(6) > div {
+    left: 23px;
+    top: 23px;
+    animation-delay: -0.25s;
+  }
+  .ldio-pxsmqoait2h > div:nth-child(6) {
+    transform: rotate(225deg);
+    transform-origin: 29px 29px;
+  }.ldio-pxsmqoait2h div:nth-child(7) > div {
+    left: 44px;
+    top: 14px;
+    animation-delay: -0.125s;
+  }
+  .ldio-pxsmqoait2h > div:nth-child(7) {
+    transform: rotate(270deg);
+    transform-origin: 50px 20px;
+  }.ldio-pxsmqoait2h div:nth-child(8) > div {
+    left: 65px;
+    top: 23px;
+    animation-delay: 0s;
+  }
+  .ldio-pxsmqoait2h > div:nth-child(8) {
+    transform: rotate(315deg);
+    transform-origin: 71px 29px;
+  }
+  .loadingio-spinner-spin-g6wdppbvcis {
+    width: 67px;
+    height: 67px;
+    display: inline-block;
+    overflow: hidden;
+    background: rgba(237,242,243,255);
+  }
+  .ldio-pxsmqoait2h {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: translateZ(0) scale(0.67);
+    backface-visibility: hidden;
+    transform-origin: 0 0; /* see note above */
+  }
+  .ldio-pxsmqoait2h div { box-sizing: content-box; }
+  /* generated by https://loading.io/ */
