--- a/templates/content.html
+++ b/templates/content.html
@@ -76,9 +76,16 @@
               If you're hesitant, scared of the risk or don't have any knowledge of the stock market... <br>
       </div>
         
-        
 </div>
-    
+
+<figure class="quote">
+  <blockquote>
+     <strong>A lot of people with high IQs are terrible investors</strong> <em>because</em> they’ve got terrible temperaments. You need to keep raw, irrational emotion under control.
+  </blockquote>
+  <figcaption>
+    &mdash; Charlie Munger, <cite>Vice Chairman, Berkshire Hathaway</cite>  </figcaption>
+</figure>
+
 <!-- Footer -->
 <div class="form-group" id="form-content">
 <h4>{{ message }}</h4>
