--- a/templates/content.html
+++ b/templates/content.html
@@ -131,21 +131,10 @@
 
     <!-- Right -->
     <div>
-      <a><i class="fa fa-facebook"></i
-      ></a>
-      <a href="" class="me-4 text-reset">
-        <i class="fa fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fa fa-google"></i>
-      </a>
-      <a href="https://www.instagram.com/flbl_/" target="_blank" class="me-4 text-reset">
-        <i class="fa fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
+      <a href="https://www.linkedin.com/in/florian-blakaj-57844721b/" target="_blank" class="me-4 text-reset">
         <i class="fa fa-linkedin"></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="https://github.com/FlorBl" target="_blank" class="me-4 text-reset">
         <i class="fa fa-github"></i>
       </a>
     </div>
