--- a/templates/content.html
+++ b/templates/content.html
@@ -169,9 +169,9 @@
           <p><i class="fa fa-home me-3"></i> Montreal, QC</p>
           <p>
             <i class="fa fa-envelope me-3"></i>
-            watts_projects@protonmail.com
+            florian.blakaj0@gmail.com
           </p>
-          <p><i class="fa fa-phone me-3"></i> + 438 509 9191</p>
+          <p><i class="fa fa-phone me-3"></i> + (438) 409 3663</p>
         </div>
         <!-- Grid column -->
       </div>
