--- a/templates/content.html
+++ b/templates/content.html
@@ -154,7 +154,7 @@
             <i class="fa fa-diamond me-3"></i> Watts
           </h6>
           <p>
-            You envision, we create.
+            You envision, I create.
           </p>
         </div>
         <!-- Grid column -->
@@ -183,7 +183,7 @@
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Copyright:
-    <a class="text-reset fw-bold" href="">Watts Projects</a>
+    <a class="text-reset fw-bold" href="">Florian Blakaj</a>
   </div>
   <!-- Copyright -->
 </footer>
